[package]
name = "spider-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cache-server"
path = "src/server.rs"

[[bin]]
name = "worker-client"
path = "src/client.rs"

[dependencies]
spider-core = { path = "../spider-core" }
spider-storage = { path = "../spider-storage" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "macros", "signal"] }
tonic = "0.12"
rmp-serde = "1.3"

[build-dependencies]
tonic-build = "0.12"
