[package]
name = "spider-bench"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cache-server"
path = "src/server.rs"

[[bin]]
name = "worker-client"
path = "src/client.rs"

[dependencies]
spider-core = { path = "../spider-core" }
spider-storage = { path = "../spider-storage" }
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "sync", "macros", "signal"] }
zstd = "0.13"
