[package]
name = "spider-storage"
version = "0.1.0"
edition = "2024"

[lib]
name = "spider_storage"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
rmp-serde = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = "0.8.6"
spider-core = { path = "../spider-core" }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
rmp-serde = "1.3"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }
